--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
             <button onclick="startGame()">Start game</button>
         </div>
     </div>
+
+    <div id="quizArea" class="hide">
+        <div class="questionArea">
+            <div class="question">
+              <div id="timer">30</div>
+              <div id="questionStatement"></div>
+              <div id="answers">
+    
+              </div>
+            </div>
+          </div>
+        <div class="levelArea"></div>
+
+
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
