--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
               </div>
             </div>
           </div>
-        <div class="levelArea"></div>
+        <div id="levelArea">
+            <ul id="levelList" ></ul>
+        </div>
 
 
     </div>
