--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="container">
             <label for="">Enter your username to start</label>
             <input type="text" placeholder="Enter your username" id="username">
-            <small id="usernameError"></small>
-            <button onclick="startGame()">Start game</button>
+            <small id="usernameError"class="error"></small>
+            <button class="button" onclick="startGame()">Start game</button>
         </div>
     </div>
 
@@ -26,12 +26,19 @@
               </div>
             </div>
           </div>
-        <div id="levelArea">
+        <div class="levelArea">
             <ul id="levelList" ></ul>
         </div>
-
-
     </div>
+    <div id="resultScreen" class="hide">
+        <div class="container">
+          <h1 id="message">Better luck next time!</h1>
+          <h3 id="priceMoney">You won:</h3>
+          <button class="button" onclick="location.reload()">Play Again</button>
+        </div>
+      </div>
+
+
     <script src="./index.js"></script>
 </body>
 </html>
